# construction-safety-monitor

./: .gitignore  LICENSE  README.md  inference.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: README.md
notebooks/: 01_data_exploration.ipynb  02_training.ipynb  03_evaluation.ipynb
outputs/: .gitkeep
src/: annotator.py  config.py  detector.py  safety_rules.py  utils.py  violation_tracker.py
tests/: test_detector.py  test_safety_rules.py
