[project]
name = "construction-safety-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "ultralytics>=8.4.30",
]
